Use normal file paths instead of urls